### 1.9.7 (2021-08-31) * (sbormann) Added option to close collapsible subheaders, if others open. * (sbormann) Fixed missing subheaders if new line option was activated. * (sbormann) Added option to define new section spacing. * (sbormann) Minor design enhancements to dark mode, ADDITIONAL_INFO and JSON-Table-Widget. * (sbormann) Added more options to configure cols of JSON-Table-Widget. * (sbormann) Redesigned CONTROL_MODE of Thermostats to be a fieldset instead of a dropdown. * (sbormann) Overwrite step for HomematicIP-Temperature sensors with wrong min and max values. * (sbormann) Added option to send state-values when clicking on play, pause and stop to media. * (sbormann) Updated dependencies. * (sbormann) Added sections to widget options. * (sbormann) Added option to show state and level devided for device type value.

--- a/www/index.css
+++ b/www/index.css
@@ -1327,13 +1327,6 @@ html.noscroll body {
 	width: 16px;	
 	cursor: pointer;
 }
-.iQontrolDialogTimestampSwitch {
-	position: absolute;
-	right: 3px;
-	top: 2px;
-	width: 16px;	
-	cursor: pointer;
-}
 /* -- jqte */
 .jqte { 
     width:300px; 
@@ -1908,6 +1901,9 @@ html.color-mode-dark #Dialog{
 	background: #898888 !important;
 	border-color: #5f5f5f !important;
 	text-shadow: 0 1px 0 #999 !important;
+}
+html.color-mode-dark .iQontrolDialogTimestampSwitch {
+	filter: brightness(55%);
 }
 html.color-mode-dark .ui-input-text{
 	color: #222 !important;
